--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <img src="./avatar.jpg" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Roma Red</h1>
-      <h3 class="header__subtitle">Единственный и неповторимый QA Engineer</h3>
+      <h3 class="header__subtitle">именно я QA Engineer</h3>
     </header>
     <main>
       <section class="links">
@@ -69,7 +69,7 @@
       </section>
     </main>
     <footer>
-      <button type = "button" class="button-link" href=""> Кредо </button>
+      <button type = "button" class="button-link" href=""> Кредо 😉 </button>
     </footer>
     <script type="text/javascript" src="js.js"></script>
   </body>
